# todo_server

./: README.md  pyproject.toml
config/: settings.py
todo/: admin.py  backends.py  exception.py  models.py  serializers.py  service.py  token.py  urls.py  views.py
